Update ReplaceXmlNode.java